@@ -444,17 +444,17 @@ int ixmlDocument_createElementNSEx(
 	IXML_Element **rtElement)
 {
 	IXML_Element *newElement = NULL;
-	int errCode = IXML_SUCCESS;
+	int ret = IXML_SUCCESS;
 	int line = 0;
 
 	if (doc == NULL || namespaceURI == NULL || qualifiedName == NULL) {
 		line = __LINE__;
-		errCode = IXML_INVALID_PARAMETER;
+		ret = IXML_INVALID_PARAMETER;
 		goto ErrorHandler;
 	}
 
-	errCode = ixmlDocument_createElementEx(doc, qualifiedName, &newElement);
-	if (errCode != IXML_SUCCESS) {
+	ret = ixmlDocument_createElementEx(doc, qualifiedName, &newElement);
+	if (ret != IXML_SUCCESS) {
 		line = __LINE__;
 		goto ErrorHandler;
 	}
@@ -464,16 +464,16 @@ int ixmlDocument_createElementNSEx(
 		line = __LINE__;
 		ixmlElement_free(newElement);
 		newElement = NULL;
-		errCode = IXML_INSUFFICIENT_MEMORY;
+		ret = IXML_INSUFFICIENT_MEMORY;
 		goto ErrorHandler;
 	}
 	// set the localName and prefix 
-	errCode = ixmlNode_setNodeName((IXML_Node *)newElement, qualifiedName);
-	if (errCode != IXML_SUCCESS) {
+	ret = ixmlNode_setNodeName((IXML_Node *)newElement, qualifiedName);
+	if (ret != IXML_SUCCESS) {
 		line = __LINE__;
 		ixmlElement_free(newElement);
 		newElement = NULL;
-		errCode = IXML_INSUFFICIENT_MEMORY;
+		ret = IXML_INSUFFICIENT_MEMORY;
 		goto ErrorHandler;
 	}
 
@@ -481,12 +481,11 @@ int ixmlDocument_createElementNSEx(
 
 ErrorHandler:
 	*rtElement = newElement;
-	if (errCode != IXML_SUCCESS) {
-		IxmlPrintf("(%s::ixmlDocument_createElementNSEx): Error %d, line %d\n",
-			__FILE__, errCode, line);
+	if (ret != IXML_SUCCESS) {
+		IxmlPrintf(__FILE__, line, "ixmlDocument_createElementNSEx", "Error %d\n", ret);
 	}
 
-	return errCode;
+	return ret;
 }
 
 
