@@ -149,7 +149,7 @@ void UpnpPrintf(
 	ithread_mutex_lock(&GlobalDebugMutex);
 	va_start(ArgList, FmtStr);
 	if (!DEBUG_TARGET) {
-		if( DbgFileName ) {
+		if (DbgFileName) {
 			UpnpDisplayFileAndLine(stdout, DbgFileName, DbgLineNo);
 		}
 		vfprintf(stdout, FmtStr, ArgList);
@@ -321,33 +321,6 @@ void PrintThreadPoolStats(
 		stats.totalThreads,
 		stats.totalWorkTime,
 		stats.totalIdleTime);
-}
-
-
-void printNodes(IXML_Node *tmpRoot, int depth)
-{
-    int i;
-    IXML_NodeList *NodeList1;
-    IXML_Node *ChildNode1;
-    unsigned short NodeType;
-    const DOMString NodeValue;
-    const DOMString NodeName;
-    NodeList1 = ixmlNode_getChildNodes(tmpRoot);
-    for (i = 0; i < 100; ++i) {
-        ChildNode1 = ixmlNodeList_item(NodeList1, i);
-        if (ChildNode1 == NULL) {
-            break;
-        }
-    
-        printNodes(ChildNode1, depth+1);
-        NodeType = ixmlNode_getNodeType(ChildNode1);
-        NodeValue = ixmlNode_getNodeValue(ChildNode1);
-        NodeName = ixmlNode_getNodeName(ChildNode1);
-        UpnpPrintf(UPNP_ALL, API, __FILE__, __LINE__,
-            "DEPTH-%2d-IXML_Node Type %d, "
-            "IXML_Node Name: %s, IXML_Node Value: %s\n",
-            depth, NodeType, NodeName, NodeValue);
-    }
 }
 
 
